--- a/styles/main.css
+++ b/styles/main.css
@@ -1912,15 +1912,16 @@ section {
 }
 
 .accordion__title {
-  padding: 1.5rem 0;
-  border-bottom: 1px solid rgba(210, 210, 210, 0.4);
-  cursor: pointer;
-  transition: color 0.6s;
-  font-weight: 600;
   position: relative;
+  min-height: 7.1rem;
   display: flex;
   align-items: center;
   gap: 1.2rem;
+  padding: 1.5rem 3rem 1.5rem 0;
+  border-bottom: 1px solid rgba(210, 210, 210, 0.4);
+  font-weight: 600;
+  cursor: pointer;
+  transition: all 0.8s ease-in-out;
 }
 .accordion__title:hover, .accordion__title.active {
   color: #0041F9;
